--- a/public/style.css
+++ b/public/style.css
@@ -82,6 +82,9 @@ section {
   display: none;
   font-weight: 600;
 }
+.users-div strong{
+  color: red;
+}
 /* ! user-details ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 #user-details {
   min-height: 120px;
@@ -194,14 +197,14 @@ img {
   max-width: 450px;
   font-size: 18px;
   overflow-wrap: break-word;
+  padding: 4px 6px;
 }
 .recipant-message {
   align-self: flex-start;
 }
 .recipant-message span {
   background-color: rgb(163, 200, 255);
-  padding: 7px;
-  border-radius: 0 5px 5px;
+  border-radius: 0 9px 9px;
 }
 .recipant-message svg {
   color: rgb(163, 200, 255);
@@ -212,8 +215,7 @@ img {
 }
 .sender-message span {
   background-color: rgb(92, 162, 255);
-  padding: 7px;
-  border-radius: 5px 0 5px 5px;
+  border-radius: 9px 0 9px 9px;
 }
 .sender-message svg {
   color: rgb(92, 162, 255);
@@ -232,6 +234,7 @@ img {
   line-height: 0;
   border: none;
   background-color: transparent;
+  cursor: pointer;
 }
 
 #message-input button span {
@@ -242,9 +245,10 @@ img {
   color: rgb(44, 45, 46);
 }
 
-#message-input span {
+#message-input>span {
   line-height: 0;
   border: none;
+  cursor: pointer;
   background-color: transparent;
 }
 
