--- a/views/chat.html
+++ b/views/chat.html
@@ -59,7 +59,8 @@
                 </div>
                 <div>
                     <form action="javascript:void(0);" id="message-input" onsubmit="sendMessage();">
-                        <span onclick="showEmojiBox()"><span class="material-icons-round">sentiment_satisfied_alt</span></span>
+                        <span onclick="showEmojiBox()"><span
+                                class="material-icons-round">sentiment_satisfied_alt</span></span>
                         <input type="text" name="" id="" placeholder="Type a message">
                         <button type="submit"><span class="material-icons-round">send</span></button>
                     </form>
@@ -126,6 +127,7 @@
     <script src="../public/sockets.js"></script>
     <script src="../public/recentChats.js"></script>
     <script src="../public/chatArea.js"></script>
+    <script src="../public/chatScript.js"></script>
 </body>
 
 </html>
